--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,8 @@ nav:
     - Home: index.md       # docs/index.md にリンク
     - API:
         - SpicySessions: api/spicysessions_api_readme.md # docs/guide/setup.md にリンク
-        - microCMS: api\cms_api_readme.md
+        - microCMS: api/cms_api_readme.md
     - Front:
-        - football_info: front\football_info_readme.md
+        - football_info: front/football_info_readme.md
         - SpicySessions: front/spicysessions_readme.md
-        - 架空キャンプ場サイト: front\web-test_readme.md
+        - 架空キャンプ場サイト: front/web-test_readme.md
